--- a/agenda/src/app/paginas/home/home.component.html
+++ b/agenda/src/app/paginas/home/home.component.html
@@ -1,1 +1,22 @@
-<p>Estou Logado!</p>
+<p>Estou logado!</p>
+<a class="btn btn-primary" (click)="logout()" href="/" role="button">Logout</a>
+<div class="row">
+    <div class="col-12">
+        <table id="tabela" class="table table-striped table-hover display" width="100%">
+            <thead>
+                <tr>
+                    <th class="all" width="40%">Nome</th>
+                    <th>Telefone</th>
+                    <th>Celular</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr *ngFor="let item of contatos">
+                    <td>{{item['nome']}}</td>
+                    <td>{{item['telefone']}}</td>
+                    <td>{{item['celular']}}</td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+</div>
