--- a/agenda/src/app/autenticador/login/login.component.html
+++ b/agenda/src/app/autenticador/login/login.component.html
@@ -1,31 +1,42 @@
-<div class="auth-fluid-form-box">
-    <div class="align-items-center d-flex">
-        <div class="card-body">
-            <div class="text-center text-lg-center">
-                <span></span>
-            </div>
-            <p></p>
-            <h4 class="mt-0">Autenticação</h4>
-            <p class="text-muted mb-4">Entre com seu login</p>
-            <form [formGroup]="loginForm" id="loginForm" (ngSubmit)="onSubmit()">
-                <div class="form-group">
-                    <label for="username">Login</label>
-                    <input class="form-control" required formControlName="username" type="text" id="username" placeholder="Entre com o username" [ngClass]="{ 'is-invalid': (submitted) && f.username.errors }">
-                    <div *ngIf="(submitted) && f.username.errors" class="invalid-feedback">
-                        <div *ngIf="f.username.errors.required">Login obrigatório.</div>
-                    </div>
-                </div>
-                <div class="form-group">
-                    <label for="password">Senha</label>
-                    <input class="form-control" required formControlName="password" type="password" id="password" placeholder="Digite aqui a sua senha" [ngClass]="{ 'is-invalid': (submitted) && f.password.errors }">
-                    <div *ngIf="(submitted) && f.password.errors" class="invalid-feedback">
-                        <div *ngIf="f.password.errors.required">A senha é obrigatória.</div>
-                    </div>
-                </div>
-                <div class="form-group mb-0 text-center">
-                    <button class="btn btn-primary btn-block" type="submit"><i class="mdi mdi-login"></i> Entrar </button>
-                </div>
-            </form>
-        </div>
+<link href="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+<script src="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<!------ Include the above in your HEAD tag ---------->
+
+<div class="wrapper fadeInDown">
+  <div id="formContent">
+    <!-- Tabs Titles -->
+
+    <!-- Icon -->
+    <div class="fadeIn first">
+      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQt-F5GQg8qB2fWquF1ltQvAT2Z8Dv5pJLb9w&usqp=CAU" id="icon" alt="User Icon" />
     </div>
+
+    <!-- Login Form -->
+    <h4 class="mt-0">Autenticação</h4>
+    <p class="text-muted mb-4">Entre com seu login</p>
+    <form [formGroup]="loginForm" id="loginForm" (ngSubmit)="onSubmit()">
+        <div class="form-group">
+            <input class="form-control fadeIn second" required formControlName="username" type="text" id="username" placeholder="Login" [ngClass]="{ 'is-invalid': (submitted) && f.username.errors }">
+            <div *ngIf="(submitted) && f.username.errors" class="invalid-feedback">
+                <div *ngIf="f.username.errors.required">Login obrigatório.</div>
+            </div>
+        </div>
+        <div class="form-group">
+            <input class="form-control fadeIn third" required formControlName="password" type="password" id="password" placeholder="Senha" [ngClass]="{ 'is-invalid': (submitted) && f.password.errors }">
+            <div *ngIf="(submitted) && f.password.errors" class="invalid-feedback">
+                <div *ngIf="f.password.errors.required">A senha é obrigatória.</div>
+            </div>
+        </div>
+        <div class="form-group mb-0 text-center">
+            <button class="btn btn-primary btn-block fadeIn fourth" type="submit"><i class="mdi mdi-login"></i> Entrar </button>
+        </div>
+    </form>
+
+    <!-- Remind Passowrd -->
+    <div id="formFooter">
+      <a class="underlineHover" href="#">Esqueceu a senha?</a>
+    </div>
+
+  </div>
 </div>
