--- a/agenda/src/app/paginas/home/home.component.html
+++ b/agenda/src/app/paginas/home/home.component.html
@@ -1,68 +1,79 @@
-<p>Estou logado!</p>
-<a class="btn btn-primary" (click)="logout()" href="/" role="button">Logout</a>
-<div class="row">
-    <div class="col-12">
-        <table id="tabela" class="table table-striped table-hover display" width="100%">
-            <thead>
-                <tr>
-                    <th class="all" width="40%">Nome</th>
-                    <th>Telefone</th>
-                    <th>Celular</th>
-                    <th>Ação</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr *ngFor="let item of contatos">
-                    <td>{{item['nome']}}</td>
-                    <td>{{item['telefone']}}</td>
-                    <td>{{item['celular']}}</td>
-                    <td>
-                        <button type="button" (click)="editar(item['id']); openBackDropCustomClass(content);" class="btn btn-info">Editar</button> |
-                        <button type="button" (click)="remover(item['id'])" class="btn btn-danger">Remover</button>
-                    </td>
-                </tr>
-            </tbody>
-        </table>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+<body>
+    <p>Estou logado!</p>
+    <a class="btn btn-secondary logout" (click)="logout()" href="/" role="button">Logout</a>
+    <div class="row">
+        <div class="col-12 table-wrapper">
+            <div class="table-title">
+                <div class="row">
+                    <div class="col-sm-8"><h2>Lista de Contatos</h2></div>
+                    <div class="col-sm-4">
+                        <button type="button" class="btn btn-info add-new" (click)="adicionar(); openBackDropCustomClass(content);"><i class="fa fa-plus"></i> Novo Contato</button>
+                    </div>
+                </div>
+            </div>
+            <table id="tabela" class="table table-striped table-hover display">
+                <thead>
+                    <tr>
+                        <th class="all" width="40%">Nome</th>
+                        <th>Telefone</th>
+                        <th>Celular</th>
+                        <th>Ação</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr *ngFor="let item of contatos">
+                        <td>{{item['nome']}}</td>
+                        <td>{{item['telefone']}}</td>
+                        <td>{{item['celular']}}</td>
+                        <td>
+                            <a class="edit" title="Editar" type="button" (click)="editar(item['id']); openBackDropCustomClass(content);" data-toggle="tooltip"><i class="material-icons">&#xE254;</i></a>
+                            <a class="delete" title="Deletar" type="button" (click)="remover(item['id'])" data-toggle="tooltip"><i class="material-icons">&#xE872;</i></a>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
     </div>
-</div>
-<button class="btn btn-outline-primary mb-2 mr-2" (click)="adicionar(); openBackDropCustomClass(content);">Adicionar</button>
 
-<ng-template #content let-modal>
-    <div class="modal-header">
-      <h4 class="modal-title">Adicionar / Editar</h4>
-      <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
-        <span aria-hidden="true">&times;</span>
-      </button>
-    </div>
-    <div class="modal-body">
-        <form [formGroup]="contatoForm" id="contatoForm" (ngSubmit)="onSubmit()">
-            <div class="form-group">
-                <label for="nome">Nome</label>
-                <input class="form-control" required formControlName="nome" type="text" id="nome" placeholder="Entre com o nome do contato" [ngClass]="{ 'is-invalid': (submitted) && f.nome.errors }">
-                <div *ngIf="(submitted) && f.nome.errors" class="invalid-feedback">
-                    <div *ngIf="f.nome.errors.required">Nome obrigatório.</div>
+    <ng-template #content let-modal>
+        <div class="modal-header">
+            <h4 class="modal-title">Adicionar / Editar</h4>
+            <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
+            <span aria-hidden="true">&times;</span>
+            </button>
+        </div>
+        <div class="modal-body">
+            <form [formGroup]="contatoForm" id="contatoForm" (ngSubmit)="onSubmit()">
+                <div class="form-group">
+                    <label for="nome">Nome</label>
+                    <input class="form-control" required formControlName="nome" type="text" id="nome" placeholder="Entre com o nome do contato" [ngClass]="{ 'is-invalid': (submitted) && f.nome.errors }">
+                    <div *ngIf="(submitted) && f.nome.errors" class="invalid-feedback">
+                        <div *ngIf="f.nome.errors.required">Nome obrigatório.</div>
+                    </div>
                 </div>
-            </div>
-            <div class="form-group">
-                <label for="telefone">Telefone</label>
-                <input class="form-control" required formControlName="telefone" type="text" id="telefone" placeholder="Digite o telefone" [ngClass]="{ 'is-invalid': (submitted) && f.telefone.errors }">
-                <div *ngIf="(submitted) && f.telefone.errors" class="invalid-feedback">
-                    <div *ngIf="f.telefone.errors.required">Telefone obrigatório.</div>
+                <div class="form-group">
+                    <label for="telefone">Telefone</label>
+                    <input class="form-control" required formControlName="telefone" type="tel" pattern="[0-9]{4}-[0-9]{4}" id="telefone" placeholder="Telefone ex:1235-4678" [ngClass]="{ 'is-invalid': (submitted) && f.telefone.errors }">
+                    <div *ngIf="(submitted) && f.telefone.errors" class="invalid-feedback">
+                        <div *ngIf="f.telefone.errors.required">Telefone obrigatório.</div>
+                    </div>
                 </div>
-            </div>
-            <div class="form-group">
-                <label for="celular">Celular</label>
-                <input class="form-control" required formControlName="celular" type="text" id="celular" placeholder="Digite o celular" [ngClass]="{ 'is-invalid': (submitted) && f.celular.errors }">
-                <div *ngIf="(submitted) && f.celular.errors" class="invalid-feedback">
-                    <div *ngIf="f.celular.errors.required">Celular obrigatório.</div>
+                <div class="form-group">
+                    <label for="celular">Celular</label>
+                    <input class="form-control" required formControlName="celular" type="tel" pattern="\([0-9]{2}\) [0-9]{4,6}-[0-9]{3,4}$" id="celular" placeholder="Celular ex:(12) 91235-4678" [ngClass]="{ 'is-invalid': (submitted) && f.celular.errors }">
+                    <div *ngIf="(submitted) && f.celular.errors" class="invalid-feedback">
+                        <div *ngIf="f.celular.errors.required">Celular obrigatório.</div>
+                    </div>
                 </div>
-            </div>
-            <div class="form-group mb-0 text-center">
-                <button class="btn btn-primary btn-block" type="submit"><i class="mdi mdi-login"></i> Salvar </button>
-            </div>
-        </form>
-    </div>
-    <div class="modal-footer">
-      <button type="button" class="btn btn-light" (click)="modal.close('Close click')">Cancelar</button>
-    </div>
-  </ng-template>
+                <div class="form-group mb-0 text-center">
+                    <button class="btn btn-primary btn-block salvar" type="submit"><i class="mdi mdi-login"></i> Salvar </button>
+                </div>
+            </form>
+        </div>
+        <div class="modal-footer">
+            <button type="button" class="btn btn-light" (click)="modal.close('Close click')">Cancelar</button>
+        </div>
+    </ng-template>
+</body>
